force-app/main/default/objects/WorkOrder/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>44324: It was during this point in the build that we identified it would be best to have this lookup on the Work Order going forward to support</description>
    <inlineHelpText>Selected address at time of Work order creation</inlineHelpText>
    <label>Address</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected Primary Address does not match the WO Sub Project</errorMessage>
        <filterItems>
            <field>$Source.Sub_Project__c</field>
            <operation>equals</operation>
            <valueField>Address.Sub_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>