force-app/main/default/objects/WorkOrder/fields/All_Inclusive_Man_Hour_Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>All_Inclusive_Man_Hour_Cost_Estimate__c</fullName>
    <description>A manually entered dollar amount to indicate the overall man hour estimate for a given foreman. This can also be set via the Project Estimate upload process.</description>
    <inlineHelpText>A manually entered dollar amount to indicate the overall man hour estimate for a given foreman. This can also be set via the Project Estimate upload process.</inlineHelpText>
    <label>All-Inclusive Man Hour Cost Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>