force-app/main/default/objects/WorkOrder/fields/Cancelation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Date__c</fullName>
    <description>29507</description>
    <label>Cancelation Date</label>
    <type>Date</type>
</CustomField>