force-app/main/default/objects/WorkOrder/fields/Content_Document_Links__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Links__c</fullName>
    <description>28053 Temp field to store the Content DocumentIDs from the mobile Upload image so that the Content Document Link records are created in the after save flow</description>
    <label>Content Document Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>