force-app/main/default/objects/WorkOrder/fields/Crew_User__c.field-meta.xml
<CustomField>
    <fullName>Crew_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be removed</description>
    <label>Crew User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>