force-app/main/default/objects/WorkOrder/fields/Current_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Name__c</fullName>
    <description>BA: NPLMA - Used to set current user on form when certifying JHA</description>
    <formula>$User.FirstName &amp; &apos; &apos; &amp; $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Name</label>
    <type>Text</type>
</CustomField>