force-app/main/default/objects/WorkOrder/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <description>46847 Optional Customer Reference Number field on WO</description>
    <inlineHelpText>Optional Customer Reference Number</inlineHelpText>
    <label>Customer Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>