force-app/main/default/objects/WorkOrder/fields/Default_Crew__c.field-meta.xml
<CustomField>
    <fullName>Default_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used in Apex as well as LWC of Launch Page. In the case of offline mode, this field is being sent to Youreka in URL(This field was created for NPL MA)</description>
    <label>Default Crew</label>
    <referenceTo>Default_Crew__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_OrdersDCrew</relationshipName>
    <type>Lookup</type>
</CustomField>