force-app/main/default/objects/WorkOrder/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>45905 Since the Mobile App shows description in the Compact Layout and the preference was to show the address there we are replacing the OOTB Description with a custom field.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>