force-app/main/default/objects/WorkOrder/fields/Diab_Launch_Page_Update_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Diab_Launch_Page_Update_Stamp__c</fullName>
    <description>5/1/24: Field to be removed based on discussion with Jake. See stories 28654 and #2869.  Will be updated from Launch Page(This field was created for NPL MA)</description>
    <label>Launch Page Update Stamp</label>
    <type>DateTime</type>
</CustomField>