force-app/main/default/objects/WorkOrder/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <formula>Partner_Data__r.Employee__r.firstname__c +&apos; &apos;+ Partner_Data__r.Employee__r.middlename__c +&apos; &apos;+  Partner_Data__r.Employee__r.lastname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>