force-app/main/default/objects/WorkOrder/fields/Files_Uploaded_in_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Files_Uploaded_in_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>28053 trigger to query files related to the Work Order and add to the Sub Project</description>
    <label>Files Uploaded in Mobile</label>
    <type>Checkbox</type>
</CustomField>