force-app/main/default/objects/WorkOrder/fields/Foreman_Email__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Email__c</fullName>
    <description>This field is being referred to in Launch Page LWC. We are sending this info to Youreka in URL in Offline Mode(This field was created for NPL MA).</description>
    <formula>Foreman_SFS_User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foreman Email</label>
    <type>Text</type>
</CustomField>