force-app/main/default/objects/WorkOrder/fields/Foreman_Name__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Name__c</fullName>
    <description>This field is being referred to in Launch Page LWC. We are sending this info to Youreka in URL in Offline Mode(This field was created for NPL MA).</description>
    <formula>IF( Foreman_SFS_User__r.MiddleName  &lt;&gt; NULL ,Foreman_SFS_User__r.FirstName +&apos; &apos; + Foreman_SFS_User__r.MiddleName +&apos; &apos;+ Foreman_SFS_User__r.LastName,Foreman_SFS_User__r.FirstName +&apos; &apos;+ Foreman_SFS_User__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foreman Name</label>
    <type>Text</type>
</CustomField>