force-app/main/default/objects/WorkOrder/fields/Foreman_SFS_User__c.field-meta.xml
<CustomField>
    <fullName>Foreman_SFS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in:
	Diab_WorkorderPrefillTriggerHandler
	Foreman_Email
	Foreman_Name1
	Foreman_Name
	WorkOrder_Owner_Is_Current_User
	Diab Set Foreman on Work Order
	Diab Alert When Notes are added on JHA form
	Diab Populate Default Crew Members on WOPrefill
	Test Time zone 9:30 Alert
	Timezone test Send Alert
	Diab Alert When Notes are added on JHA form
	Diab Populate Default Crew Members on WOPrefill
	Diab Set Foreman on Prefill Record
	FSL Work Order Layout with Project Details
	Work Order Layout(This field was created for NPL MA).</description>
    <label>Foreman SFS User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>