force-app/main/default/objects/WorkOrder/fields/Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Address__c</fullName>
    <description>45294</description>
    <formula>Address__r.Formatted_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Address to show complete address or Lat/Long</inlineHelpText>
    <label>Formatted Address</label>
    <type>Text</type>
</CustomField>