force-app/main/default/objects/WorkOrder/fields/JHA_Work_Order_Title__c.field-meta.xml
<CustomField>
    <fullName>JHA_Work_Order_Title__c</fullName>
    <description>44315 Updated header of the Youreka form</description>
    <formula>&quot;WO-&quot;&amp;WorkOrderNumber&amp;&quot;: &quot;&amp;LEFT(  Subject,80)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JHA Work Order Title</label>
    <type>Text</type>
</CustomField>