force-app/main/default/objects/WorkOrder/fields/Job_WBS__c.field-meta.xml
<CustomField>
    <fullName>Job_WBS__c</fullName>
    <description>46161: Used for extracting Work Order WBS Number and display in Youreka</description>
    <formula>Sub_Project__r.Project__r.NPLUS_Job__r.SAP_Service_Contract_Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job WBS</label>
    <type>Text</type>
</CustomField>