force-app/main/default/objects/WorkOrder/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BA: NPLMA - updated from SAP when no remaining work can be completed on WBS</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>