force-app/main/default/objects/WorkOrder/fields/Next_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit_Date__c</fullName>
    <description>5/1/24: Field to be removed based on discussion with Jake. See stories 28654 and #2869. Set to autopopulate the prefills object and on timesheets today that creates the default timesheet entry</description>
    <label>Next Visit Date</label>
    <type>Date</type>
</CustomField>