force-app/main/default/objects/WorkOrder/fields/On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Date__c</fullName>
    <description>29507</description>
    <label>On Hold Date</label>
    <type>Date</type>
</CustomField>