force-app/main/default/objects/WorkOrder/fields/Partner_Data__c.field-meta.xml
<CustomField>
    <fullName>Partner_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master data that comes from SAP(This field was created for NPL MA).</description>
    <label>Partner Data</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Partner_Data__c.Work_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Partner_Data__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>