force-app/main/default/objects/WorkOrder/fields/Primary_Resource__c.field-meta.xml
<CustomField>
    <fullName>Primary_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#28654</description>
    <inlineHelpText>The Phase which is assigned to this Work Order after dispatching the first Service Appointment</inlineHelpText>
    <label>Primary Resource (Phase)</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>