force-app/main/default/objects/WorkOrder/fields/Primary_Resource_Locked__c.field-meta.xml
<CustomField>
    <fullName>Primary_Resource_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>28050 flow locks when Primary Resource is assigned</description>
    <label>Primary Resource Locked</label>
    <type>Checkbox</type>
</CustomField>