force-app/main/default/objects/WorkOrder/fields/Primary_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Resource_Name__c</fullName>
    <description>45791 Work Order table on the Sub Project</description>
    <formula>IF(ISBLANK( Primary_Resource__c ),&quot;Unassigned&quot;, Primary_Resource__r.Service_Resource__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the Primary Resource Service Resource Name</inlineHelpText>
    <label>Primary Resource Name</label>
    <type>Text</type>
</CustomField>