force-app/main/default/objects/WorkOrder/fields/ProfitCenter__c.field-meta.xml
<CustomField>
    <fullName>ProfitCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The WOs profit center(This field was created for NPL MA).</description>
    <label>Profit Center</label>
    <referenceTo>Profit_Center__c</referenceTo>
    <relationshipLabel>Work Orders Profit Center</relationshipLabel>
    <relationshipName>Work_Orders_ProfitCenter</relationshipName>
    <type>Lookup</type>
</CustomField>