force-app/main/default/objects/WorkOrder/fields/Project_Estimate_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Estimate_Approval_Status__c</fullName>
    <formula>TEXT(Sub_Project__r.Project__r.Project_Estimate_Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Estimate Approval Status</label>
    <type>Text</type>
</CustomField>