force-app/main/default/objects/WorkOrder/fields/SAP_IsClosed__c.field-meta.xml
<CustomField>
    <fullName>SAP_IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this closed?(This field was created for NPL MA).</description>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>