force-app/main/default/objects/WorkOrder/fields/SAP_IsReleased__c.field-meta.xml
<CustomField>
    <fullName>SAP_IsReleased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this released?(This field was created for NPL MA).</description>
    <label>Is Released</label>
    <type>Checkbox</type>
</CustomField>