force-app/main/default/objects/WorkOrder/fields/SAP_Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Planned_End_Date__c</fullName>
    <description>The planned end date(This field was created for NPL MA).</description>
    <label>Planned End Date</label>
    <type>DateTime</type>
</CustomField>