force-app/main/default/objects/WorkOrder/fields/SAP_Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Planned_Start_Date__c</fullName>
    <description>The planned start date description(This field was created for NPL MA).</description>
    <label>Planned Start Date</label>
    <type>DateTime</type>
</CustomField>