force-app/main/default/objects/WorkOrder/fields/SAP_Proj_Created_On__c.field-meta.xml
<CustomField>
    <fullName>SAP_Proj_Created_On__c</fullName>
    <description>The date the project was changed on(This field was created for NPL MA).</description>
    <label>Proj Created On</label>
    <type>DateTime</type>
</CustomField>