force-app/main/default/objects/WorkOrder/fields/SAP_Proj_Type__c.field-meta.xml
<CustomField>
    <fullName>SAP_Proj_Type__c</fullName>
    <description>The project type(This field was created for NPL MA).</description>
    <label>Proj Type</label>
    <length>7</length>
    <type>Text</type>
</CustomField>