force-app/main/default/objects/WorkOrder/fields/SAP_ProjChangedOn__c.field-meta.xml
<CustomField>
    <fullName>SAP_ProjChangedOn__c</fullName>
    <description>The date the project was changed on(This field was created for NPL MA).</description>
    <label>Proj Changed On</label>
    <type>DateTime</type>
</CustomField>