force-app/main/default/objects/WorkOrder/fields/SAP_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Project_Name__c</fullName>
    <description>The project name(This field was created for NPL MA).</description>
    <label>Project Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>