force-app/main/default/objects/WorkOrder/fields/SAP_ProjectExternalCode__c.field-meta.xml
<CustomField>
    <fullName>SAP_ProjectExternalCode__c</fullName>
    <description>The project external code(This field was created for NPL MA).</description>
    <label>Project External Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>