force-app/main/default/objects/WorkOrder/fields/SAP_RequestingCostCenter__c.field-meta.xml
<CustomField>
    <fullName>SAP_RequestingCostCenter__c</fullName>
    <description>The requesting cost center(This field was created for NPL MA).</description>
    <label>Requesting Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>