force-app/main/default/objects/WorkOrder/fields/SAP_ResponsibleCostCenter__c.field-meta.xml
<CustomField>
    <fullName>SAP_ResponsibleCostCenter__c</fullName>
    <description>The responsible cost center(This field was created for NPL MA).</description>
    <label>Responsible Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>