force-app/main/default/objects/WorkOrder/fields/SAP_WBS_Cost_Sheet__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_Cost_Sheet__c</fullName>
    <label>WBS Cost Sheet</label>
    <length>6</length>
    <type>Text</type>
</CustomField>