force-app/main/default/objects/WorkOrder/fields/SAP_WBS_Description__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_Description__c</fullName>
    <description>The WBS Description(This field was created for NPL MA).</description>
    <label>WBS Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>