force-app/main/default/objects/WorkOrder/fields/SAP_WBS_Element__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_Element__c</fullName>
    <description>The WBS number test field(This field was created for NPL MA).</description>
    <externalId>true</externalId>
    <label>WBS Element</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>