force-app/main/default/objects/WorkOrder/fields/SAP_WBS_ElementHierarchyLevel__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_ElementHierarchyLevel__c</fullName>
    <description>The WBSt hierarchy level(This field was created for NPL MA).</description>
    <label>WBS ElementHierarchyLevel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>