force-app/main/default/objects/WorkOrder/fields/SAP_WBS_ElementIsBillingElement__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_ElementIsBillingElement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this WBS a billing element?(This field was created for NPL MA).</description>
    <label>WBS ElementIsBillingElement</label>
    <type>Checkbox</type>
</CustomField>