force-app/main/default/objects/WorkOrder/fields/SAP_WBS_ElementIsPlanningElement__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_ElementIsPlanningElement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this WBS a planning element?(This field was created for NPL MA).</description>
    <label>WBS ElementIsPlanningElement</label>
    <type>Checkbox</type>
</CustomField>