force-app/main/default/objects/WorkOrder/fields/SAP_WBS_ElementShortID__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_ElementShortID__c</fullName>
    <description>The WBS short ID(This field was created for NPL MA).</description>
    <label>WBS ElementShortID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>