force-app/main/default/objects/WorkOrder/fields/SAP_WBS_ElementWithCodingMask__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_ElementWithCodingMask__c</fullName>
    <description>The WBS with formatting for the display to the user(This field was created for NPL MA).</description>
    <label>WBS ElementWithCodingMask</label>
    <length>24</length>
    <type>Text</type>
</CustomField>