force-app/main/default/objects/WorkOrder/fields/SAP_WBS_IsAccountAssignmentElement__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_IsAccountAssignmentElement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the WBS an account assignment element?(This field was created for NPL MA).</description>
    <label>WBS IsAccountAssignmentElement</label>
    <type>Checkbox</type>
</CustomField>