force-app/main/default/objects/WorkOrder/fields/SAP_WBS_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_Number__c</fullName>
    <label>WBS Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>