force-app/main/default/objects/WorkOrder/fields/SAP_WBS_Price_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_Price_Date__c</fullName>
    <description>The WBS price date(This field was created for NPL MA).</description>
    <label>WBS Price Date</label>
    <type>Date</type>
</CustomField>