force-app/main/default/objects/WorkOrder/fields/SAP_WBS_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_Status__c</fullName>
    <description>The WBS status(This field was created for NPL MA).</description>
    <label>WBS Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>