force-app/main/default/objects/WorkOrder/fields/SAP_WBS_WorkType__c.field-meta.xml
<CustomField>
    <fullName>SAP_WBS_WorkType__c</fullName>
    <description>The WBS work type(This field was created for NPL MA).</description>
    <label>WBS WorkType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>