force-app/main/default/objects/WorkOrder/fields/Searchable_Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Searchable_Formatted_Address__c</fullName>
    <description>Text field auto populated with the text from the Formatted Address formula field to make it searchable.</description>
    <label>Searchable Formatted Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>