force-app/main/default/objects/WorkOrder/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>29624 This is required and there are validation rules that execute so long as this is not blank. Do not make optional without considering all validation rules and automations</description>
    <label>Sub Project</label>
    <referenceTo>Sub_Project__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>