force-app/main/default/objects/WorkOrder/fields/Sub_Project_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project_Work_Order__c</fullName>
    <description>#29728 Enhanced Grouping in reports</description>
    <formula>Sub_Project__r.Name&amp;&quot;-&quot;&amp; WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Project-Work Order</label>
    <type>Text</type>
</CustomField>