force-app/main/default/objects/WorkOrder/fields/Subtotal_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Estimates__c</fullName>
    <description>This is a summary of the total value of the Subtotal on all child Work Order Line Items where record type is Estimate.</description>
    <inlineHelpText>This is a summary of the total value of the Subtotal on all child Work Order Line Items where record type is Estimate.</inlineHelpText>
    <label>Subtotal Estimates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>