force-app/main/default/objects/WorkOrder/fields/Superintendent_Email__c.field-meta.xml
<CustomField>
    <fullName>Superintendent_Email__c</fullName>
    <description>To be removed</description>
    <label>Superintendent Email</label>
    <type>Email</type>
</CustomField>