force-app/main/default/objects/WorkOrder/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <description>This field is being referred to in Launch Page LWC. We are sending this info to Youreka in URL in Offline Mode(This field was created for NPL MA).</description>
    <formula>Supervisor_SFS_User__r.FirstName +&apos; &apos;+ Supervisor_SFS_User__r.MiddleName +&apos; &apos;+ Supervisor_SFS_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Name</label>
    <type>Text</type>
</CustomField>