force-app/main/default/objects/WorkOrder/fields/Supervisor_SFS_User__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_SFS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a source field for Supervisor Email and Name, and those are being used on the Launch page(This field was created for NPL MA).</description>
    <label>Supervisor SFS User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders2_del</relationshipName>
    <type>Lookup</type>
</CustomField>