force-app/main/default/objects/WorkOrder/fields/Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Cost__c</fullName>
    <description>This is the Total Estimated Man Hours multiplied by All-Inclusive Man Hour Cost Estimate.</description>
    <formula>Total_Estimated_Man_Hours__c * All_Inclusive_Man_Hour_Cost_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Total Estimated Man Hours multiplied by All-Inclusive Man Hour Cost Estimate.</inlineHelpText>
    <label>Total Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>