force-app/main/default/objects/WorkOrder/fields/Total_Estimated_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Man_Hours__c</fullName>
    <description>Users can specify how long they think a given work order will take. This will be used to calculate total estimated costs.</description>
    <inlineHelpText>Users can specify how long they think a given work order will take. This will be used to calculate total estimated costs.</inlineHelpText>
    <label>Total Estimated Man Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>