force-app/main/default/objects/WorkOrder/fields/USGas_JHA_Date__c.field-meta.xml
<CustomField>
    <fullName>USGas_JHA_Date__c</fullName>
    <description>Jitin: created for story: 24331. This field will be updated from JHA process</description>
    <label>JHA Date</label>
    <type>Date</type>
</CustomField>