force-app/main/default/objects/WorkOrder/fields/USGas_JHA_Exception_date__c.field-meta.xml
<CustomField>
    <fullName>USGas_JHA_Exception_date__c</fullName>
    <description>Jitin: created for story: 24331: to store the Form Exception Date</description>
    <label>JHA Exception Date</label>
    <type>Date</type>
</CustomField>