force-app/main/default/objects/WorkOrder/fields/WBS_From_Primary_Resource__c.field-meta.xml
<CustomField>
    <fullName>WBS_From_Primary_Resource__c</fullName>
    <description>45791 plenty of use cases. started with sub project table</description>
    <formula>IF(
ISBLANK( Primary_Resource__c ),&quot;TBD&quot;, Primary_Resource__r.SAP_Phase_WBS_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>WBS # from Primary Resource</inlineHelpText>
    <label>WBS</label>
    <type>Text</type>
</CustomField>