force-app/main/default/objects/WorkOrder/fields/Work_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Name__c</fullName>
    <description>45791 for tables where we don&apos;t want links</description>
    <formula>WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Type Name</label>
    <type>Text</type>
</CustomField>