force-app/main/default/objects/WorkOrder/fields/WorkOrder_Owner_Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_Owner_Is_Current_User__c</fullName>
    <description>When the weather info is being fetched from the API it is stored to WorkOrder as well as on Prefill Record. So that, the user can see the weather info on WorkOrder itself(This field was created for NPL MA). Brought this down from production 6/17/2024 as it wasn&apos;t in CenturiDev.</description>
    <formula>Foreman_SFS_User__r.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkOrder Owner Is Current User</label>
    <type>Checkbox</type>
</CustomField>