force-app/main/default/objects/WorkOrder/recordTypes/NPLUS_Basic.recordType-meta.xml
<RecordType>
    <fullName>NPLUS_Basic</fullName>
    <active>true</active>
    <description>The basic Work Order Record Type used for all new work orders today</description>
    <label>NPLUS Basic</label>
</RecordType>