force-app/main/default/objects/WorkOrder/validationRules/ISBLANK_ACCOUNT.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_ACCOUNT</fullName>
    <active>true</active>
    <description>#28654 Account should not be blank</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Sub_Project__c )),
ISBLANK(  AccountId  ))</errorConditionFormula>
    <errorMessage>Work Order Account should not be missing when a Sub Project has been identified.</errorMessage>
</ValidationRule>