force-app/main/default/objects/WorkOrder/validationRules/ISBLANK_CANCELATION_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_CANCELATION_DATE</fullName>
    <active>true</active>
    <description>#29507</description>
    <errorConditionFormula>AND(
ISBLANK(  Cancelation_Date__c  ),
TEXT(  Status  ) = &apos;Canceled&apos;)</errorConditionFormula>
    <errorMessage>Work Order Cancelation Date is required when status is Canceled</errorMessage>
</ValidationRule>