force-app/main/default/objects/WorkOrder/validationRules/ISBLANK_CANCELATION_REASON.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_CANCELATION_REASON</fullName>
    <active>true</active>
    <description>#29507</description>
    <errorConditionFormula>AND(
ISBLANK(  Cancelation_Reason__c  ),
TEXT(  Status  ) = &apos;Canceled&apos;)</errorConditionFormula>
    <errorMessage>Work Order Cancelation Reason is required when status is Canceled</errorMessage>
</ValidationRule>