force-app/main/default/objects/WorkOrder/validationRules/ISBLANK_END_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_END_DATE</fullName>
    <active>true</active>
    <description>#29507</description>
    <errorConditionFormula>AND(
ISBLANK( EndDate),
TEXT(  Status  ) = &apos;Completed&apos;
)</errorConditionFormula>
    <errorMessage>Work Order End Date is required when status is Completed or Canceled</errorMessage>
</ValidationRule>