force-app/main/default/objects/WorkOrder/validationRules/ISBLANK_ON_HOLD_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_ON_HOLD_DATE</fullName>
    <active>true</active>
    <description>#29507</description>
    <errorConditionFormula>AND(
ISBLANK( On_Hold_Date__c ),
TEXT(  Status  ) = &apos;On Hold&apos;)</errorConditionFormula>
    <errorMessage>Work Order On Hold Date is required when status is On Hold</errorMessage>
</ValidationRule>