force-app/main/default/objects/WorkOrder/validationRules/ISBLANK_SERVICE_TERRITORY.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_SERVICE_TERRITORY</fullName>
    <active>true</active>
    <description>#28654 Service Territory should not be blank</description>
    <errorConditionFormula>AND( NOT(ISBLANK(Sub_Project__c )),
ISBLANK(  ServiceTerritoryId ))</errorConditionFormula>
    <errorMessage>Work Order Service Territory should not be missing when a Sub Project has been identified.</errorMessage>
</ValidationRule>