force-app/main/default/objects/WorkOrder/validationRules/ISBLANK_STATUS.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_STATUS</fullName>
    <active>true</active>
    <description>#28654 Status should not be blank</description>
    <errorConditionFormula>TEXT(Status)=&apos;&apos;</errorConditionFormula>
    <errorMessage>Work Order Status cannot be blank</errorMessage>
</ValidationRule>