force-app/main/default/objects/WorkOrder/validationRules/ISCHANGED_ACCOUNT.validationRule-meta.xml
<ValidationRule>
    <fullName>ISCHANGED_ACCOUNT</fullName>
    <active>true</active>
    <description>#28654 Account should not change</description>
    <errorConditionFormula>AND( $Profile.Name &lt;&gt;&apos;System Administrator&apos;,PRIORVALUE(AccountId)&lt;&gt;&apos;&apos;,
ISCHANGED(  AccountId ))</errorConditionFormula>
    <errorMessage>Work Order Account should not change. You may cancel and recreate a work order as needed or contact a System Adminstrator.</errorMessage>
</ValidationRule>